[package]
name = "rustable"
version = "0.1.0"
authors = ["root"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
dashmap = "5.0.0"
lazy_static = "1.4.0"
nom = "7.1.0"
regex = "1.5.4"
tokio = { version = "1", features = ["full"] }
